# neural-video-matting

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: inference_config.yaml  train_config.yaml
docs/: ARCHITECTURE.md
scripts/: composite.py  download_data.py  matte_video.py  serve.py  train.py
src/data/: __init__.py  augmentation.py  dataset.py  trimap_gen.py
src/model/: __init__.py  decoder.py  encoder.py  matting_network.py  recurrent.py  refiner.py
src/serving/: __init__.py  app.py  composite.py  inference.py
src/training/: __init__.py  evaluate.py  losses.py  trainer.py
tests/: conftest.py  test_api.py  test_data.py  test_model.py  test_recurrent.py
